// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should get layout 1`] = `
Array [
  <div
    className="
          absolute top-[75px] bottom-0 right-0 left-0
          bg-white
          flex flex-1
          transition-transform
          transition-duration-200
          transition-ease-in
          z-[11]
          -translate-y-full
        "
  />,
  <div />,
]
`;

exports[`should render 404 1`] = `
Array [
  <div
    className="
          absolute top-[75px] bottom-0 right-0 left-0
          bg-white
          flex flex-1
          transition-transform
          transition-duration-200
          transition-ease-in
          z-[11]
          -translate-y-full
        "
  />,
  "Foo",
]
`;

exports[`should render empty 1`] = `
Array [
  <div
    className="
          absolute top-[75px] bottom-0 right-0 left-0
          bg-white
          flex flex-1
          transition-transform
          transition-duration-200
          transition-ease-in
          z-[11]
          -translate-y-full
        "
  />,
  "Foo",
]
`;

exports[`should render fetching 1`] = `
Array [
  <div
    className="
          absolute top-[75px] bottom-0 right-0 left-0
          bg-white
          flex flex-1
          transition-transform
          transition-duration-200
          transition-ease-in
          z-[11]
          -translate-y-full
        "
  />,
  "Foo",
]
`;
